--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -10,4 +10,5 @@
     <string name="preference_recurrent_calls_text">Habilitar llamadas recurrentes</string>
     <string name="preference_recurrent_calls_timing_text">" Establecer período de intervalo"</string>
     <string name="preference_recurrent_calls_timing_summary">En minutos</string>
+    <string name="search_menu">Buscar</string>
 </resources>
